modules/core/client/css/core.css
.content {
  margin-top: 60px;
}
.undecorated-link:hover {
  text-decoration: none;
}
[ng\:cloak],
[ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
  display: none !important;
}
.header-profile-image {
  opacity: 0.8;
  height: 28px;
  width: 28px;
  border-radius: 50%;
  margin-right: 5px;
}
.open .header-profile-image,
a:hover .header-profile-image {
  opacity: 1;
}
.user-header-dropdown-toggle {
  padding-top: 11px !important;
  padding-bottom: 11px !important;
}
.error-text {
  display: none;
}
.has-error .help-block.error-text {
  display: block;
}
.has-error .help-inline.error-text {
  display: inline;
}

.container {
  margin-right: auto;
  margin-left: auto;
  padding: 0px;
}
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}
@media (min-width: 1360px) {
  .container {
    width: 100%;
  }
}

.jumbotron {
  margin-bottom: 20px;
  margin-top: 20px;
}

.float-left {
  float: left; 
  
}
.float-right {
  float: right; 
  
}

.style {
  background-color: transparent;
  width: 100%;
  height: 100%;
}

#style2 {
  /*background-color: #F4F7D9;*/
  z-index: -2;
}

#style {
  background-color: #F4F7D9;
}
#footerstyle {
  background-color: #3e423a;
  color: #F4F7D9;
  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
}

a {
  color: #F4F7D9;
}

#logo {
  border: 1px solid #fff;
  border-radius: 75px;
  margin-left: auto;
  margin-right: auto;
  box-shadow: 0 1px #FFFFFF inset, 0 1px 3px rgba(34, 25, 25, 0.4);
}

#center {
  margin-left: auto;
  margin-right: auto;
}

#homeheader {
  padding-bottom: 40px;
  padding-top: 30px;
  margin-left: auto;
  margin-right: auto;
  font-size: 30px;
}

#banner {
  margin-bottom:3%;
  height: 225px;
  width: 100%;
  position: absolute;
  top: 67.5%;
  background-color: #6c6e58;
  z-index: -1;
  -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.85);
  -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.85);
  box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.85);
}

#food {
  position: absolute;
  top: 40%;
  left: 5%;
  border:1px;
  border-radius: 100px;
  width: 30%;
  height: 40%;
  -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
-moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
  z-index: 1;
}


#featuredpic {
  opacity: 1; 
  margin-right: auto;
  margin-left: auto; 
}

.z-index-2 {

  z-index: 2;
}

.top {
  margin-bottom: 4%;  
}

#overlay {
  /*position: absolute;
  top: 40px; 
  left: 24%;*/

  max-height: 50%;
  max-width: 40%;
  margin-right: 10%;
  margin-left: auto;
  width: 100%;
  height: 100%;
  background-color: #F4F7D9;
  opacity: 0.95;
  border: 1px solid #F4F7D9;
  border-radius: 10px;
  margin-top: 7.5%; 

  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
}
#overlay-two {
  /*position: absolute;
  top: 40px; 
  left: 24%;*/

  opacity: 0.9;
  border: 1px solid #fff;
  border-radius: 10px;
  background-color: #F4F7D9;
  opacity: 1;
}


#overlay-left {
  /*
  position: absolute;
  top: 60px; 
  left: 3%; */
  width: 100%;
  height: 80%;
  background-color: #F4F7D9;
  opacity: 0.85;
  border: 1px solid #fff;
  border-radius: 25px;
}
.topper {
  margin-bottom: 10px; 
}

#overlay-right {
  /*
  position: absolute;
  top: 60px; 
  left: 77%; */
  width: 100%;
  height: 80%;
  background-color: #F4F7D9;
  opacity: 0.85;
  border: 1px solid #fff;
  border-radius: 25px;
}

#title {
  position: absolute;
  text-align: center;
  top: 2.5px; 
  left: 40%;
  width: 22%;
  height: 50px;
  font-size: 35px;
}

#table-border {
  border: 1px solid #6c6e58;
  background-color: #CBE3D9;
}

#paragraph {
  font-size: 16px;
}

#searchBar {
  margin: 15px 10px;
}

.picture-bg {
  background-image: url("modules/core/client/img/brand/veggies.jpg");
}

.myheaders {
  font-size: 17px;
}

#codeheader {
  width: 60px;
  padding-left: 4px;
  text-align: left;
}
#nameheader {
  padding-left: 6px;
  text-align: left;
}

#newListing {
  margin: 5px 0px 0px 5px; 
}

#details {
  font-size: 15px;
}

#details-info {
  margin-left: 25px;
}

#picture-thumbnail {
 max-width: 350px;
 max-height: 350px; 
}

#image-border {
  width: 75%;
  height: 75%;
  border: 1px solid #f5f5f5;
}

#ing {
  vertical-align: center; 
  border-bottom: 2px solid #000;
  border-right: 2px solid #000;
  margin-right: 20px;
  text-align: right;
}

#padbot {
  padding-bottom: 40px;
  padding-top: -20px;
  margin-top: -15px;

}

#recipeheader {
  border-bottom: 2px solid #000;
}

#bottomborder {
  height: 100%;
  width: 100%;
}

#buffer1 {
}

#buffer2 {
  margin-left: 10px;
}

.table-striped > tbody > tr:nth-of-type(odd) {
  background-color: #a4c4be;
}
.table-hover > tbody > tr:hover {
  background-color: #417478;
}

.table-scrolling {
  max-height: 400px;
  overflow: auto;
  margin: 15px; 
}

#homecat {
  background-color: #F4F7D9;
  border: 1px solid #F4F7D9;
  border-radius: 10px;
  margin-right: 2%;
  margin-left: 2%;
  margin-bottom: 2%;
}

#cat1 {
  height: 90%;
  width: 90%;
  margin-left: auto;
  margin-right: auto; 
  margin-top: 3%;
  margin-bottom: 3%;
}

#cat2 {
  height: 90%;
  width: 90%;
  margin-left: auto;
  margin-right: auto; 
  margin-top: 3%;
  margin-bottom: 3%;
}

#cat3 {
  height: 90%;
  width: 90%;
  margin-left: auto;
  margin-right: auto; 
  margin-top: 3%;
  margin-bottom: 3%;
}

#cattitle {
  margin-top: 4%;
  margin-bottom: ;
}

h1 span {
  color: #F4F7D9; 
  font: bold 52px/75px Helvetica, Sans-Serif; 
  letter-spacing: -1px;  
  background: rgb(25, 23, 24); /* fallback color */
  background: rgba(25, 23, 24, 0.85);
  padding: 10px; 

  -webkit-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
  -moz-box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
  box-shadow: 0px 0px 7px 0px rgba(0,0,0,0.7);
}

